# rust-executable-metadata

./: .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  on-pr.yml  on-push.yml
src/: lib.rs
