[package]
name = "rust-executable-metadata"
version = "0.1.0"
authors = ["Svix Inc. <oss@svix.com>"]
edition = "2024"
rust-version = "1.88"
description="Make your rust binaries legible to security scanners"
homepage="https://www.svix.com"
repository="https://github.com/svix/rust-executable-metadata"
readme="README.md"
license="MIT"

[dependencies]
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = "^1.0.85"

[badges]
maintenance = {status="actively-developed"}
